<resources>
    <string name="app_name" translatable="false">Chalkpy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_help">Help</string>
    <string name="current_expression_title">Current expression</string>
    <string name="empty_showcase">No expressions available</string>

    <!-- button description -->
    <string name="button_exp_change_side_desc">Change side of the term in the equation</string>
    <string name="button_exp_move_left_desc">Commute term to left</string>
    <string name="button_exp_move_right_desc">Commute term to right</string>
    <string name="button_exp_delete_desc">Cancel term if it\'s possible</string>
    <string name="button_exp_associate_desc">Associate terms</string>
    <string name="button_exp_disassociate_desc">Disassociate terms</string>
    <string name="button_exp_operate">Operate terms if it\'s possible</string>

    <string name="button_exp_title">Allowed Actions</string>

    <string name="help_expression_text">
        Click on terms to select one\n
        Long press on any of them to activate multiple selection (starting from the pressed one)\n
        If an operator or a parenthesis is selected, the whole expression will be too\n
        Click on anywhere but the expression to cancel the current selection
    </string>

    <string name="help_button_text">
        Click on the buttons to perform an action. Long press to show action description\n
        Not-allowed actions will take no effect on the expression\n
        If a button appears as disabled, it means that action can not be applied
    </string>

    <string name="expression_fragment_title">Expression Board</string>
    <string name="help_fragment_title">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_showcase">Showcase</string>
    <string name="menu_history">Exp. History</string>
    <string name="menu_board">Board</string>
    <string name="showcase_fragment_title">Expression Showcase</string>
    <string name="showcase_fragment_subtitle">Tap on one to load it</string>
    <string name="history_fragment_title">History</string>
    <string name="history_fragment_subtitle">Tap on one to go back to it</string>
    <string name="history_empty_list">No history yet...</string>
    <string name="popup_multiple_selection_enabled">Multiple selection enabled</string>

    <string name="settings_fragment_title">Settings</string>
    <string name="settings_category_colors_title">Colors</string>
    <string name="settings_category_colors_dark_board_title">Dark board</string>
    <string name="default_dark_board_checkbox_preference" translatable="false">false</string>
    <string name="settings_category_colors_selected_exp_color_list_title">Selected expression color</string>
    <string name="settings_category_colors_selected_exp_color_list_summary">Used for current expression highlighting</string>
    <string name="settings_category_colors_selected_exp_color_dialog_title">Select one color</string>

    <string name="entry_selected_exp_color_amber">Amber (default)</string>
    <string name="entry_selected_exp_color_blue">Blue</string>
    <string name="entry_selected_exp_color_red">Red</string>
    <string name="action_undo">Undo</string>
    <string name="action_undo_help">Undo last action</string>
    <string name="popup_unable_to_undo">No previous expression yet</string>
    <string name="popup_multiple_selection_depth_error">Selection at different level</string>
    <string name="operation_failure">Action can\'t be applied</string>

    <string name="operation_failure_dissociative">Must be an operation</string>
    <string name="operation_failure_associative">Select start and end elements</string>
    <string name="operation_failure_multiple_selection">Select at least two elements</string>
    <string name="operation_failure_operate">Can\'t operate that selection</string>

    <string name="action_change_side">Change side</string>
    <string name="action_move_left">Commute left</string>
    <string name="action_move_right">Commute right</string>
    <string name="action_delete">Cancel term</string>
    <string name="action_associate">Associate</string>
    <string name="action_disassociate">Disassociate</string>
    <string name="action_operate">Operate</string>
    <string name="action_common_factor">Common factor</string>
    <string name="action_distribute">Distribute</string>

    <string name="no_exp_selected">Must do a selection</string>


</resources>
