<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_category_colors_title">

        <CheckBoxPreference
            android:key="color_board_checkbox_preference"
            android:title="@string/settings_category_colors_dark_board_title"
            android:defaultValue="@string/default_dark_board_checkbox_preference"/>

        <ListPreference
            android:key="selected_exp_color_list_preference"
            android:title="@string/settings_category_colors_selected_exp_color_list_title"
            android:dialogTitle="@string/settings_category_colors_selected_exp_color_dialog_title"
            android:entries="@array/entries_selected_exp_color"
            android:entryValues="@array/values_selected_exp_color"
            android:summary="@string/settings_category_colors_selected_exp_color_list_summary"
            android:defaultValue="AMBER"/>

    </PreferenceCategory>

</PreferenceScreen>